# takumi

./: .gitignore  Cargo.toml
.changeset/: lovely-horses-cover.md
.github/workflows/: ci.yml  publish-etheirystech.yml  publish-wasm.yml
docs/content/docs/: reference.mdx
takumi/: Cargo.toml  README.md
takumi-c-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
takumi-c-ffi/include/: takumi.h
takumi-c-ffi/src/: lib.rs
takumi-c-ffi/tests/: smoke.c  smoke.rs
takumi-helpers/: package.json
takumi-image-response/src/backends/: node.ts
takumi-napi-core/: Cargo.toml  package.json
takumi-napi-core/src/: load_font_task.rs  renderer.rs
takumi-server/src/: lib.rs
takumi-wasm/: Cargo.toml
takumi-wasm/src/: bundle.rs  lib.rs  model.rs
takumi/src/: lib.rs
takumi/src/core/: font_context.rs  glyph.rs  mod.rs
takumi/src/layout/: inline.rs  tree.rs
takumi/src/layout/node/: image.rs  mod.rs  text.rs
takumi/src/layout/style/: mod.rs  stylesheets.rs
takumi/src/layout/style/properties/: conic_gradient.rs  font_stretch.rs  gradient_utils.rs  length.rs  line_height.rs  linear_gradient.rs  mod.rs  outline.rs  overflow.rs  radial_gradient.rs
takumi/src/rendering/: background_drawing.rs  canvas.rs  inline_drawing.rs  mod.rs  render.rs  renderer.rs  text_drawing.rs  write.rs
takumi/src/rendering/components/: shadow.rs
takumi/src/resources/: image.rs
takumi/tests/: fixtures.rs  fixtures_text.rs  font_tests.rs  test_utils.rs
takumi/tests/fixtures/: rtl.rs  style_clip_path.rs  style_mask_image.rs  style_visuals.rs  svg_output.rs  text.rs
(+1 files in other folders)
