[package]
name = "takumi-wasm"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
base64 = "0.22"
serde_bytes = "0.11"
js-sys = "0.3"
aes-gcm = "0.10"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3", "std"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.takumi]
path = "../takumi"
features = ["woff2", "svg", "detailed_css_error"]
default-features = false

# getrandom is only used to enable the "js" feature for wasm32 compatibility
[package.metadata.cargo-machete]
ignored = ["getrandom"]

# https://github.com/rust-lang/rust/issues/93294
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--all-features']
